# mathmatize-api

./: .gitignore  README.md  app.py  pyproject.toml  run.sh
examples/: basic.py
mathmatize/: api.py
mathmatize/components/: __init__.py  base.py  task.py  task_row.py
mathmatize/components/activity/: __init__.py  base.py  poll.py  quiz.py
mathmatize/utils/: __init__.py  scrape.py
