[tool.poetry]
name = "mathmatize-ping"
version = "0.1.0"
description = ""
authors = ["corgi-in-tights <59304120+corgi-in-tights@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
